# bb

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  package-lock.json  rust-toolchain.toml  tailwind.config.js
migrations/2025-07-31-024114_add_drawing_game_tables/: down.sql  up.sql
scripts/: start.sh
src/: app.rs  auth_legacy.rs  backfill_service.rs  cancellable_sse.rs  embedding_service.rs  lib.rs  main.rs  rag_service.rs  rss_service.rs  schema.rs  state.rs  summary_refresh_service.rs  supabase.rs  test.rs
src/auth/: api.rs  auth_components.rs  mod.rs  oauth.rs  secure.rs  server.rs  types.rs
src/components/: auth_nav.rs  batch_processor.rs  blogpost.rs  blogposts.rs  canvas.rs  dark_mode_toggle.rs  drawing.rs  drawing_rooms.rs  embeddings.rs  footer.rs  local_embeddings.rs  markdown.rs  mod.rs  navbar.rs  poasts.rs  rag_chat.rs  room_browser.rs  room_page.rs  rss_test.rs  search.rs  summary_refresh_processor.rs  theme_selector.rs  user_avatar.rs
src/components/canvas_sync/: client_state.rs  mod.rs  server_state.rs  types.rs  websocket.rs
src/database/: db.rs
src/embeddings_service/: local.rs
src/handlers/: canvas_ws.rs  drawing_ws.rs  mod.rs  sse.rs
src/local_llm_service/: download_llm_models.rs  download_smollm.rs  local_llm.rs  mod.rs
src/models/: game.rs  mod.rs  rooms.rs  users.rs
src/rag_service/: rag.rs
src/server_fn/: cache.rs  invalidate_poasts_cache.rs  mod.rs  rss.rs
style/: tailwind.css  themes.css
