[package]
name = "bb"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bb"
path = "src/main.rs"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[[bin]]
name = "download_models"
path = "src/bin/download_models.rs"

[[bin]]
name = "test_embedding"
path = "src/bin/test_embedding.rs"

[[bin]]
name = "test_local_insert"
path = "src/bin/test_local_insert.rs"

[[bin]]
name = "model_inspector"
path = "src/bin/model_inspector.rs"

[dependencies]
anyhow = "1.0.98"
async-openai = { version = "0.28.2", optional = true }
argon2 = { version = "0.5.3", optional = true }
axum = { version = "0.8.0", features = ["macros", "ws"], optional = true }
axum-extra = { version = "0.10.1", features = ["cookie"], optional = true }
base64 = { version = "0.22.1", optional = true }
candle-core = { version = "0.8.3", optional = true }
candle-nn = { version = "0.8.3", optional = true }
console_error_panic_hook = "0.1"
cookie = { version = "0.18.1", optional = true }
chrono = { version = "0.4.41", features = ["serde"] }
cfg-if = "1.0.0"
dotenv = { version = "0.15.0", optional = false }
dashmap = { version = "6.1.0", optional = true }
diesel = { version = "2.2.10", optional = true, features = ["chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.5.2", optional = true, features = ["postgres", "pool", "deadpool"] }
deadpool-diesel = { version = "0.6.1", optional = true, features = ["postgres", "rt_tokio_1"] }
env_logger = { version = "0.9", optional = false }
feed-rs = { version = "2.1.1", optional = true }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", optional = true }
jsonwebtoken = { version = "9.2.0", optional = true }
js-sys = "0.3.77"
leptos = { version = "0.8.9", features = ["nightly"] }
leptos-fetch = { version = "=0.4.4", features = ["devtools"] }
leptos_axum = { version = "0.8.6", optional = true }
leptos_meta = { version = "0.8.5", optional = false }
leptos_router = { version = "0.8.7", features = ["nightly"] }
log = "0.4"
memmap2 = { version = "0.9.5", optional = true }
oauth-axum = { version = "0.1.4", optional = true }
once_cell = "1.18.0"
postgrest = "1.0"
pulldown-cmark = "0.13"
rand = { version = "0.8", optional = true }
reqwest = { version = "0.12.8", features = ["json"], optional = true }
rustls = { version = "0.23.31", features = ["ring"],  optional = true }
rustls-platform-verifier = { version = "0.6.1", optional = true }
safetensors = { version = "0.5.2", optional = true }
sha2 = { version = "0.10.8", optional = true }
scraper = { version = "0.20.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
time = { version = "0.3.37", optional = true }
tokenizers = { version = "0.21.0", optional = true }
tokio = { version = "1.42", features = ["sync", "rt-multi-thread", "macros"], optional = true }
tokio-postgres = { version = "0.7.13", optional = true }
tokio-postgres-rustls = { version = "0.13.0", optional = true }
tokio-util = { version = "0.7.13", features = ["rt"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.46"
web-sys = { version = "0.3.73", features = ["Navigator", "Clipboard", "Storage", "Window", "Document", "CanvasRenderingContext2d", "TouchEvent", "TouchList", "DomRect", "Element", "Touch"] }
thiserror = "1"
tracing = { version = "0.1", optional = true }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4", "serde", "js"], optional = false }
http = "1"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:async-openai",
    "dep:argon2",
    "dep:axum",
    "dep:axum-extra",
    "dep:base64",
    "dep:cookie",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:deadpool-diesel",
    "dep:diesel",
    "dep:diesel-async",
    "dep:dashmap",
    "dep:feed-rs",
    "dep:futures",
    "dep:futures-util",
    "dep:jsonwebtoken",
    "dep:memmap2",
    "dep:rustls",
    "dep:rustls-platform-verifier",
    "dep:safetensors",
    "dep:tokenizers",
    "dep:tokio",
    "dep:tokio-postgres",
    "dep:tokio-postgres-rustls",
    "dep:tokio-util",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:oauth-axum",
    "dep:rand",
    "dep:reqwest",
    "dep:scraper",
    "dep:sha2",
    "dep:time",
    "leptos/ssr",
    "leptos-fetch/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]

bin-target = "bb"

# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "bb"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# Tailwind
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
